# lib_mysqludf_secure_shell

./: CMakeLists.txt  README.md  gcc-command  install.sh  lib_mysqludf_secure_shell.cc  lib_mysqludf_secure_shell.sql  lib_mysqludf_secure_shell_with_run.sql  lib_mysqludf_sys.c  lib_mysqludf_sys.sql
